force-app/main/default/objects/Adoption_Record__c/Adoption_Record__c.object-meta.xml
<CustomObject>
    <label>Adoption Record</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Adoption Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adoption Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>