force-app/main/default/objects/Adoption_Record__c/fields/Adopter_Email__c.field-meta.xml
<CustomField>
    <fullName>Adopter_Email__c</fullName>
    <label>Adopter Email</label>
    <type>Email</type>
</CustomField>