force-app/main/default/objects/Adoption_Record__c/fields/Adoption_Status__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Status__c</fullName>
    <label>Adoption Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>