force-app/main/default/objects/Adoption_Record__c/fields/Pet_Status__c.field-meta.xml
<CustomField>
    <fullName>Pet_Status__c</fullName>
    <formula>TEXT(Pet__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pet Status</label>
    <type>Text</type>
</CustomField>