force-app/main/default/objects/Adoption_Record__c/validationRules/Validate_Adoption_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Adoption_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Pet__r.Intake_Date__c &gt;  Adoption_Date__c</errorConditionFormula>
    <errorMessage>Adoption Date should not be before intake date.</errorMessage>
</ValidationRule>