force-app/main/default/objects/Adoption_Record__c/listViews/Rejected_Adoptions.listView-meta.xml
<ListView>
    <fullName>Rejected_Adoptions</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Adoption_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected Adoptions</label>
</ListView>